# gb-emu

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cart.rs  cartridge.rs  cpu.rs  gfx.rs  input.rs  lib.rs  main.rs  mem.rs  ppu.rs  timer.rs  util.rs
src/gb/: cartridge.rs  cpu.rs  mem.rs  memory.rs  mod.rs
