[package]
name = "gb-emu"
description = "A Game Boy emulator."
authors = ["Dustin Dobervich <ddobervich@gmail.com>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/dustin10/gb-emu"
rust-version = "1.80"

[workspace]

[dependencies]
anyhow = "1.0.89"
bounded-vec-deque = "0.1.1"
clap = { version = "4.5.17", features = ["derive"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
