[package]
name = "gb-emu"
description = "A Game Boy emulator."
authors = ["Dustin Dobervich <ddobervich@gmail.com>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/dustin10/gb-emu"
rust-version = "1.80"

[workspace]

[dependencies]
anyhow = "1.0.93"
bounded-vec-deque = "0.1.1"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
imgui = { version = "0.12.0", features = ["tables-api"] }
imgui-glow-renderer = "0.13.0"
imgui-sdl2-support = "0.13.0"
sdl2 = "0.37.0"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }

[dev-dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
